scrollbar and fix navbar

--- a/frontend/src/components/activePage/SSHTerminal/SSHTerminal.css
+++ b/frontend/src/components/activePage/SSHTerminal/SSHTerminal.css
@@ -23,6 +23,24 @@ body,
   width: 100%;
   height: 100%;
 }
-.ssh-terminal .xterm-viewport {
-  overflow: hidden !important;
+/* for browsers based on WebKit (Chrome, Edge, Safari, etc.) */
+.ssh-terminal .xterm-viewport::-webkit-scrollbar {
+  width: 8px;              
+  height: 8px;             
 }
+
+.ssh-terminal .xterm-viewport::-webkit-scrollbar-thumb {
+  background-color: #888;   
+  border-radius: 4px;       
+}
+
+.ssh-terminal .xterm-viewport::-webkit-scrollbar-track {
+  background-color: #222;   
+}
+
+/* for Firefox */
+.ssh-terminal .xterm-viewport {
+  scrollbar-width: thin;          
+  scrollbar-color: #888 #222;      
+}
+
